# summary

./: Create and SELECT.sql  README.md  list.txt  pyproject.toml  result.json  t-cases for NodaSoft.xlsx  Скрипты JS  Тестовое+Задание+SkyPro.doc
NEWproject/: pyproject.toml  tst.py
NEWproject/tests/: test_fst.py
SQL tasks/: create tables.sql  Задача SQL Петрусев .txt
diplom/: Диплом. Skyeng API.postman_collection.json  Мобильное Приложение чек-лист.xls  чек-лист ВЕБ-приложения.xls
project 1/: CourseWork.postman_test_run.json  CourseWork_Petrusev.postman_collection.json  чек-лист Расписание Петрусев.xls  чек-лист Событие Петрусев.xls
python/: ASCII Table.html  all tests and treaning.py  help with RANGE.py  import requests.py  lesson_1_task_2.py  lesson_1_task_3.py  lesson_1_task_4.py  lesson_1_task_6.py  lesson_1_task_7.py  lesson_1_task_8.py  operators.txt
python/Lesson_2/: lesson_2_task_0.py  lesson_2_task_1.py  lesson_2_task_10.py  lesson_2_task_2.py  lesson_2_task_3.py  lesson_2_task_4.py  lesson_2_task_5.py  lesson_2_task_6.py  lesson_2_task_7.py  test.py
python/Lesson_3/: adress.py  lesson_3_task_1.py  lesson_3_task_2.py  lesson_3_task_3.py  lesson_3_task_4.py  posting.py  smartphone.py  user.py
python/Lesson_3/test/: Users.py  card.py  test.py
python/Lesson_4/: calculator.py  calculator_test.py  pytest.ini
python/Lesson_4/4.1/: pytest.ini  (+1 more)
python/Lesson_5/: ya.py
python/for my project/: 1393876762-all.txt  add value.py  fff.txt  pet_project_work.py  task 2 trening
python/lesson_1/: lesson_1_task_1.py  lesson_1_task_7.py
training/: test.html
