[project]
name = "my tests"
version = "010"
description = "its only for tests"
authors = [
    {name = "me"}
]
license = {text = "none"}
readme = "README.md"
requires-python = "3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
