[project]
name = "newproject"
version = "0.1.0"
description = ""
authors = [
    {name = "crobb4all",email = "crobb4all@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "newproject", from = "src"}]


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
flake8 = "^7.2.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
